//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  lastname String
  googleId String
  firstname String
  avatar String
  posts Habit [not null]
  role Role [not null]
}

Table Habit {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Int [not null]
  name String [unique, not null]
  user User
  userId String
  dates HabitDates [not null]
}

Table HabitDates {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  date DateTime [not null]
  habitId String [not null]
  habit Habit [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Habit.userId > User.id

Ref: HabitDates.habitId > Habit.id [delete: Cascade]